# FarmYieldPrediction-MLFlow

./: README.md  main_train.py  predict.py  pyproject.toml  train.ipynb
dataset/: test_data.csv
mlartifacts/734718012324761974/2d0c921d501744cfb670e07b5792be31/artifacts/: estimator.html
mlartifacts/734718012324761974/d7f0143f0795413fbd1178459a0c0ff0/artifacts/: estimator.html
mlruns/0/: meta.yaml
mlruns/734718012324761974/: meta.yaml
mlruns/734718012324761974/2d0c921d501744cfb670e07b5792be31/: meta.yaml
mlruns/734718012324761974/2d0c921d501744cfb670e07b5792be31/metrics/: training_mean_absolute_error  training_mean_squared_error  training_r2_score  training_root_mean_squared_error  training_score
mlruns/734718012324761974/2d0c921d501744cfb670e07b5792be31/tags/: mlflow.log-model.history  mlflow.runName
mlruns/734718012324761974/cfdc78f4dbb6406298eb064dd31349c4/: meta.yaml
mlruns/734718012324761974/cfdc78f4dbb6406298eb064dd31349c4/metrics/: mae_test  mae_train  mse_test  mse_train  r2_test  r2_train  training_mean_absolute_error  training_mean_squared_error  training_r2_score  training_root_mean_squared_error  training_score
mlruns/734718012324761974/cfdc78f4dbb6406298eb064dd31349c4/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit
mlruns/734718012324761974/d7f0143f0795413fbd1178459a0c0ff0/: meta.yaml
mlruns/734718012324761974/d7f0143f0795413fbd1178459a0c0ff0/metrics/: mae_test  mae_train  mse_test  mse_train  r2_test  r2_train  training_mean_absolute_error  training_r2_score  (+3 more)
mlruns/models/crop-yield-model/: meta.yaml
(+13 files in other folders)
